--- a/Andrew_Ng/Week_2_SL/Multiple_Linear_Regression.ipynb
+++ b/Andrew_Ng/Week_2_SL/Multiple_Linear_Regression.ipynb
@@ -33,7 +33,29 @@
     "\n",
     "# Feature Scaling\n",
     "\n",
-    "**Feature scaling** is a method to enable gradient descent to run much faster. "
+    "**Feature scaling** is a method to enable gradient descent to run much faster. We rescale our features by making a transformation in order to have good data. The contour plot will look a lot more like a circle rather than an oval. This will lead gradient descent to be faster. When you have different features that take on very different ranges of values, it can cause gradient descent to run slowly but if we rescal the features so that they have comparable range of values, it will cause the algorithm to run faster.\n",
+    "\n",
+    "## Implementation Methods\n",
+    "\n",
+    "### Mean Normalization\n",
+    "\n",
+    "You start with the original features and you rescale them so that the features are centered around zero. We change the values of numeric columns in the dataset to use a common scale. We do this because our features have different ranges. The formula is given by: $$ x' = \\frac{x' - \\mu'}{\\max(x') - \\min(x')}$$\n",
+    "\n",
+    "### Z-score Normalization\n",
+    "\n",
+    "The process of normalizing every value in a dataset such that the mean of all of the values is 0 and the standard deviation is 1. The formula is given by: $$x' = \\frac{x' - \\mu'}{\\sigma'}$$ where $\\sigma$ is the standard deviation of $x$ and $\\mu$ is the mean like always.  \n",
+    "\n",
+    "## Convergence of Gradient Descent\n",
+    "\n",
+    "How can you tell when gradient descent is finally converging? Well you plot the cost function that was calculated on the training set. You make a learning curve where $J$ is your y-axis and the number of iterations is your x-axis. What you should understand from this graph is that your cost function should be decreasing after each iteration. If it is not then your learning rate is usually not ideal. Eventually your curve should flatten out to where gradient descent has converged as it is no longer decreasing. **Learning curves** are a great way to determine when you should stop training your model. You can do an automatic convergence test although the learning curve is probably the easiest way to determine. \n",
+    "\n",
+    "## Learning Rate\n",
+    "\n",
+    "We have talked a lot about the **learning rate**. How do you choose a good learning rate, $\\alpha$? You can look at your graph and identify what could possible be going wrong. A lot of the times you can see that your updated step could be overshooting the minimum. The cost will go up if the learning rate is too big. Although if it is taking too long to get to the minimum, your learning rate might be too small. Just know that your learning curve should be always decreasing. There could be a bug in the code, but a lot of the times it can be that the learning rate is too small/big assuming your code is correct. A good range of values to use is 0.001, 0.01, 0.1, 1,...\n",
+    "\n",
+    "## Feature Engineering\n",
+    "\n",
+    "When engineering your features. You want to have the best features that will optimize your model. We can define new features which are more optimized to the model that allows our model to determine what is the most important thing to predict. In **feature engineering** you can use intuition to design new features by transforming or combining original features. \n"
    ]
   },
   {
